@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016-2022 the original author or authors. 
+ * Copyright (C) 2016-2022 the original author or authors.
  *
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
@@ -24,6 +24,8 @@ package com.viglet.turing.plugins.nlp.spacy;
 import com.viglet.turing.commons.utils.TurCommonsUtils;
 import com.viglet.turing.nlp.TurNLPEntityRequest;
 import com.viglet.turing.nlp.TurNLPRequest;
+import com.viglet.turing.persistence.model.nlp.TurNLPEntity;
+import com.viglet.turing.persistence.model.nlp.TurNLPVendorEntity;
 import com.viglet.turing.persistence.repository.system.TurLocaleRepository;
 import com.viglet.turing.plugins.nlp.TurNLPPlugin;
 import com.viglet.turing.solr.TurSolrField;
@@ -35,197 +37,198 @@ import org.apache.http.client.methods.HttpPost;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.nio.CharBuffer;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+
 @Slf4j
 @Component
 public class TurSpaCyConnector implements TurNLPPlugin {
 
-	@Override
-	public Map<String, List<String>> processAttributesToEntityMap(TurNLPRequest turNLPRequest) {
-		return this.request(turNLPRequest);
-	}
+    @Override
+    public Map<String, List<String>> processAttributesToEntityMap(TurNLPRequest turNLPRequest) {
+        return this.request(turNLPRequest);
+    }
 
-	public Map<String, List<String>> request(TurNLPRequest turNLPRequest) {
-		Map<String, List<String>> entityList = processAttributes(turNLPRequest, getServerURL(turNLPRequest));
-		return this.getAttributes(turNLPRequest, entityList);
-	}
+    public Map<String, List<String>> request(TurNLPRequest turNLPRequest) {
+        Map<String, List<String>> entityList = processAttributes(turNLPRequest, getServerURL(turNLPRequest));
+        return this.getAttributes(turNLPRequest, entityList);
+    }
 
-	private URL getServerURL(TurNLPRequest turNLPRequest) {
-		try {
-			return new URL(turNLPRequest.getTurNLPInstance().getEndpointURL().concat("/ent"));
-		} catch (MalformedURLException e) {
-			log.error(e.getMessage(), e);
-		}
-		return null;
-	}
+    private URL getServerURL(TurNLPRequest turNLPRequest) {
+        try {
+            return URI.create(turNLPRequest.getTurNLPInstance().getEndpointURL().concat("/ent")).toURL();
+        } catch (MalformedURLException e) {
+            log.error(e.getMessage(), e);
+        }
+        return null;
+    }
 
-	private Map<String, List<String>> processAttributes(TurNLPRequest turNLPRequest, URL serverURL) {
-		Map<String, List<String>> entityList = new HashMap<>();
-		if (turNLPRequest.getData() != null) {
-			for (Object attrValue : turNLPRequest.getData().values()) {
-				for (String sentence : createSentences(attrValue)) {
+    private Map<String, List<String>> processAttributes(TurNLPRequest turNLPRequest, URL serverURL) {
+        Map<String, List<String>> entityList = new HashMap<>();
+        if (turNLPRequest.getData() != null) {
+            for (Object attrValue : turNLPRequest.getData().values()) {
+                for (String sentence : createSentences(attrValue)) {
 
-					processSentence(turNLPRequest, entityList, serverURL, sentence);
-				}
-			}
-		}
-		return entityList;
-	}
+                    processSentence(turNLPRequest, entityList, serverURL, sentence);
+                }
+            }
+        }
+        return entityList;
+    }
 
-	private void processSentence(TurNLPRequest turNLPRequest, Map<String, List<String>> entityList, URL serverURL,
-			String sentence) {
-		if (log.isDebugEnabled()) {
-			log.debug("SpaCy Text: {}", sentence);
-		}
-		HttpPost httpPost = prepareHttpPost(turNLPRequest, serverURL, sentence);
+    private void processSentence(TurNLPRequest turNLPRequest, Map<String, List<String>> entityList, URL serverURL,
+                                 String sentence) {
+        if (log.isDebugEnabled()) {
+            log.debug("SpaCy Text: {}", sentence);
+        }
+        HttpPost httpPost = prepareHttpPost(turNLPRequest, serverURL, sentence);
 
-		try (CloseableHttpClient httpclient = HttpClients.createDefault();
-				CloseableHttpResponse response = httpclient.execute(httpPost)) {
-			HttpEntity entity = response.getEntity();
+        try (CloseableHttpClient httpclient = HttpClients.createDefault();
+             CloseableHttpResponse response = httpclient.execute(httpPost)) {
+            HttpEntity entity = response.getEntity();
 
-			if (entity != null) {
-				String jsonResponse = new String(entity.getContent().readAllBytes(), StandardCharsets.UTF_8);
-				if (TurCommonsUtils.isJSONValid(jsonResponse)) {
-					if (log.isDebugEnabled()) {
-						log.debug("SpaCy JSONResponse: {}", jsonResponse);
-					}
-					this.getEntities(sentence, new JSONArray(jsonResponse), entityList);
-				}
-			}
-		} catch (IOException e) {
-			log.error(e.getMessage(), e);
-		}
-	}
+            if (entity != null) {
+                String jsonResponse = new String(entity.getContent().readAllBytes(), StandardCharsets.UTF_8);
+                if (TurCommonsUtils.isJSONValid(jsonResponse)) {
+                    if (log.isDebugEnabled()) {
+                        log.debug("SpaCy JSONResponse: {}", jsonResponse);
+                    }
+                    this.getEntities(sentence, new JSONArray(jsonResponse), entityList);
+                }
+            }
+        } catch (IOException e) {
+            log.error(e.getMessage(), e);
+        }
+    }
 
-	private HttpPost prepareHttpPost(TurNLPRequest turNLPRequest, URL serverURL, String sentence) {
-		JSONObject jsonBody = createJSONRequest(turNLPRequest, sentence);
-		HttpPost httpPost = new HttpPost(serverURL.toString());
-		httpPost.setHeader(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON_VALUE);
-		httpPost.setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
-		httpPost.setHeader(HttpHeaders.ACCEPT_ENCODING, StandardCharsets.UTF_8.name());
-		StringEntity stringEntity = new StringEntity(jsonBody.toString(), StandardCharsets.UTF_8);
-		httpPost.setEntity(stringEntity);
-		return httpPost;
-	}
+    private HttpPost prepareHttpPost(TurNLPRequest turNLPRequest, URL serverURL, String sentence) {
+        JSONObject jsonBody = createJSONRequest(turNLPRequest, sentence);
+        HttpPost httpPost = new HttpPost(serverURL.toString());
+        httpPost.setHeader(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON_VALUE);
+        httpPost.setHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
+        httpPost.setHeader(HttpHeaders.ACCEPT_ENCODING, StandardCharsets.UTF_8.name());
+        StringEntity stringEntity = new StringEntity(jsonBody.toString(), StandardCharsets.UTF_8);
+        httpPost.setEntity(stringEntity);
+        return httpPost;
+    }
 
-	private String[] createSentences(Object attrValue) {
-		return cleanFullText(attrValue).split("\\.");
-	}
+    private String[] createSentences(Object attrValue) {
+        return cleanFullText(attrValue).split("\\.");
+    }
 
-	private String cleanFullText(Object attrValue) {
-		return TurSolrField.convertFieldToString(attrValue).replaceAll("[\\n:;]", ". ")
-				.replaceAll("\\h|\\r|\\n|\"|'|R\\$", " ")
-				.replaceAll("\\.+", ". ").replaceAll(" +", " ").trim();
-	}
+    private String cleanFullText(Object attrValue) {
+        return TurSolrField.convertFieldToString(attrValue).replaceAll("[\\n:;]", ". ")
+                .replaceAll("\\h|\\r|\\n|\"|'|R\\$", " ")
+                .replaceAll("\\.+", ". ").replaceAll(" +", " ").trim();
+    }
 
-	private JSONObject createJSONRequest(TurNLPRequest turNLPRequest, String atributeValue) {
-		JSONObject jsonBody = new JSONObject();
-		jsonBody.put("text", atributeValue);
+    private JSONObject createJSONRequest(TurNLPRequest turNLPRequest, String atributeValue) {
+        JSONObject jsonBody = new JSONObject();
+        jsonBody.put("text", atributeValue);
 
-		if (turNLPRequest.getTurNLPInstance().getLanguage().equals(TurLocaleRepository.PT_BR)) {
-			jsonBody.put("model", "pt_core_news_sm");
-		} else {
-			jsonBody.put("model", turNLPRequest.getTurNLPInstance().getLanguage());
-		}
+        if (turNLPRequest.getTurNLPInstance().getLanguage().equals(TurLocaleRepository.PT_BR)) {
+            jsonBody.put("model", "pt_core_news_sm");
+        } else {
+            jsonBody.put("model", turNLPRequest.getTurNLPInstance().getLanguage());
+        }
 
-		ByteBuffer inputBuffer = ByteBuffer.wrap(jsonBody.toString().getBytes());
+        ByteBuffer inputBuffer = ByteBuffer.wrap(jsonBody.toString().getBytes());
 
-		Charset utf8Charset = StandardCharsets.UTF_8;
-		Charset customCharset = StandardCharsets.UTF_8;
+        Charset utf8Charset = StandardCharsets.UTF_8;
+        Charset customCharset = StandardCharsets.UTF_8;
 
-		// decode UTF-8
-		CharBuffer data = utf8Charset.decode(inputBuffer);
+        // decode UTF-8
+        CharBuffer data = utf8Charset.decode(inputBuffer);
 
-		// encode
-		ByteBuffer outputBuffer = customCharset.encode(data);
+        // encode
+        ByteBuffer outputBuffer = customCharset.encode(data);
 
-		byte[] outputData = new String(outputBuffer.array()).getBytes(StandardCharsets.UTF_8);
-		String jsonUTF8 = new String(outputData);
+        byte[] outputData = new String(outputBuffer.array()).getBytes(StandardCharsets.UTF_8);
+        String jsonUTF8 = new String(outputData);
 
-		if (log.isDebugEnabled()) {
-			log.debug("SpaCy JSONBody: {}", jsonUTF8);
-		}
-		return jsonBody;
-	}
+        if (log.isDebugEnabled()) {
+            log.debug("SpaCy JSONBody: {}", jsonUTF8);
+        }
+        return jsonBody;
+    }
 
-	public Map<String, List<String>> getAttributes(TurNLPRequest turNLPRequest, Map<String, List<String>> entityList) {
-		Map<String, List<String>> entityAttributes = new HashMap<>();
+    public Map<String, List<String>> getAttributes(TurNLPRequest turNLPRequest, Map<String, List<String>> entityList) {
+        Map<String, List<String>> entityAttributes = new HashMap<>();
 
-		for (TurNLPEntityRequest turNLPEntityRequest : turNLPRequest.getEntities()) {
-			entityAttributes.put(turNLPEntityRequest.getTurNLPVendorEntity().getTurNLPEntity().getInternalName(),
-					this.getEntity(turNLPEntityRequest.getName(), entityList));
-		}
-		if (log.isDebugEnabled()) {
-			log.debug("SpaCy getAttributes: {}", entityAttributes);
-		}
-		return entityAttributes;
-	}
+        for (TurNLPEntityRequest turNLPEntityRequest : turNLPRequest.getEntities()) {
+            Optional.ofNullable(turNLPEntityRequest)
+                    .map(TurNLPEntityRequest::getTurNLPVendorEntity)
+                    .map(TurNLPVendorEntity::getTurNLPEntity)
+                    .map(TurNLPEntity::getInternalName)
+                    .ifPresent(internalName -> entityAttributes.put(internalName,
+                            this.getEntity(turNLPEntityRequest.getName(), entityList)));
 
-	public void getEntities(String text, JSONArray json, Map<String, List<String>> entityList) {
+        }
+        if (log.isDebugEnabled()) {
+            log.debug("SpaCy getAttributes: {}", entityAttributes);
+        }
+        return entityAttributes;
+    }
 
-		for (int i = 0; i < json.length(); i++) {
-			boolean add = true;
-			JSONObject token = (JSONObject) json.get(i);
+    public void getEntities(String text, JSONArray json, Map<String, List<String>> entityList) {
 
-			int tokenStart = token.getInt("start");
-			int tokenEnd = token.getInt("end");
-			String label = token.getString("label");
+        for (int i = 0; i < json.length(); i++) {
+            boolean add = true;
+            JSONObject token = (JSONObject) json.get(i);
 
-			String term = text.substring(tokenStart, tokenEnd);
+            int tokenStart = token.getInt("start");
+            int tokenEnd = token.getInt("end");
+            String label = token.getString("label");
 
-			if (label.equals("ORG")) {
-				label = "ON";
-				if (!Character.isUpperCase(term.charAt(0)))
-					add = false;
-			}
-			if (label.equals("PER"))
-				label = "PN";
+            String term = text.substring(tokenStart, tokenEnd);
 
-			if (log.isDebugEnabled()) {
-				log.debug("SpaCy Term (NER): {} ({})", term, label);
-			}
+            if (label.equals("ORG")) {
+                label = "ON";
+                if (!Character.isUpperCase(term.charAt(0)))
+                    add = false;
+            }
+            if (label.equals("PER"))
+                label = "PN";
 
-			if (add)
-				this.handleEntity(label, term, entityList);
-		}
+            if (log.isDebugEnabled()) {
+                log.debug("SpaCy Term (NER): {} ({})", term, label);
+            }
 
-	}
+            if (add)
+                this.handleEntity(label, term, entityList);
+        }
 
-	public List<String> getEntity(String entity, Map<String, List<String>> entityList) {
-		if (log.isDebugEnabled()) {
-			log.debug("getEntity: {}", entity);
-		}
-		return entityList.get(entity);
-	}
+    }
 
-	private void handleEntity(String entityType, String entity, Map<String, List<String>> entityList) {
-		if (entityList.containsKey(entityType)) {
-			if (!entityList.get(entityType).contains(entity) && entity.trim().length() > 1) {
-				entityList.get(entityType).add(entity.trim());
-			}
-		} else {
-			List<String> valueList = new ArrayList<>();
-			valueList.add(entity.trim());
-			entityList.put(entityType, valueList);
-		}
+    public List<String> getEntity(String entity, Map<String, List<String>> entityList) {
+        if (log.isDebugEnabled()) {
+            log.debug("getEntity: {}", entity);
+        }
+        return entityList.get(entity);
+    }
 
-	}
+    private void handleEntity(String entityType, String entity, Map<String, List<String>> entityList) {
+        if (entityList.containsKey(entityType)) {
+            if (!entityList.get(entityType).contains(entity) && entity.trim().length() > 1) {
+                entityList.get(entityType).add(entity.trim());
+            }
+        } else {
+            List<String> valueList = new ArrayList<>();
+            valueList.add(entity.trim());
+            entityList.put(entityType, valueList);
+        }
+
+    }
 }
